Fix /api/posts/feed/
