# swagger/swaggerfile.json
@@ -40,12 +40,11 @@
             "name": "accesstoken"
           }, 
           {
-            "required": true, 
-            "in": "body", 
-            "name": "body", 
-            "schema": {
-              "$ref": "#/definitions/Feed"
-            }
+            "in": "header",
+            "default": 10,
+            "name": "numposts",
+            "type": "number",
+            "description": "Number of posts"
           }
         ], 
         "description": "Get the list of the most recent posts from the given user's friends"
@@ -443,13 +442,6 @@
   "basePath": "/", 
   "host": "localhost:10010", 
   "definitions": {
-    "Feed": {
-      "properties": {
-        "numposts": {
-          "type": "number"
-        }
-      }
-    }, 
     "Post": {
       "properties": {
         "rating": {
